<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ItineraryViewer"
    tools:ignore="SpeakableTextPresentCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/green_home_variant"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/authorLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/fragment_itinerary_viewer_text_view_author_label"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

        <TextView
            android:id="@+id/authorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/deleteItineraryButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/authorLabelTextView"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/mapsFragmentContainerView"
            android:name="com.example.natour.fragment.ViewMaps"
            android:layout_width="395dp"
            android:layout_height="276dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/authorTextView"
            tools:layout_editor_absoluteX="8dp" />

        <TextView
            android:id="@+id/durationLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/fragment_itinerary_viewer_text_view_duration_label"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/durationTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationTextView" />

        <TextView
            android:id="@+id/durationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/durationLabelTextView"
            app:layout_constraintTop_toBottomOf="@+id/locationTextView" />

        <TextView
            android:id="@+id/difficultyLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/fragment_itinerary_viewer_text_view_difficulty_label"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/durationLabelTextView" />

        <RatingBar
            android:id="@+id/difficultyRatingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:forceDarkAllowed="false"
            android:theme="@style/RatingBar"
            app:layout_constraintStart_toEndOf="@+id/difficultyLabelTextView"
            app:layout_constraintTop_toBottomOf="@+id/durationTextView" />

        <TextView
            android:id="@+id/disabledPeopleLabelTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/fragment_itinerary_viewer_text_view_disabled_people_label"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/difficultyRatingBar"
            app:layout_constraintTop_toBottomOf="@+id/distanceLabelTextView" />

        <ImageButton
            android:id="@+id/favouriteButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:onClick="setFavorite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/disabledPeopleLabelTextView"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/toVisitButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:onClick="setToVisit"
            android:src="@drawable/to_visit_icon"
            app:layout_constraintStart_toEndOf="@+id/favouriteButton"
            app:layout_constraintTop_toBottomOf="@+id/disabledPeopleLabelTextView"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/gpsSharingButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:onClick="sharingPosition"
            android:src="@drawable/gps_share_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/disabledPeopleLabelTextView"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favouriteButton" />

        <TextView
            android:id="@+id/distanceLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/fragment_itinerary_viewer_text_view_distance_label"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/distanceTextView"
            app:layout_constraintTop_toBottomOf="@+id/locationTextView" />

        <TextView
            android:id="@+id/distanceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationTextView" />

        <TextView
            android:id="@+id/locationLabeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/fragment_itinerary_viewer_text_view_location_label"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mapsFragmentContainerView" />

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/updateItineraryWarningButton"
            app:layout_constraintStart_toEndOf="@+id/locationLabeTextView"
            app:layout_constraintTop_toBottomOf="@+id/mapsFragmentContainerView" />

        <ImageButton
            android:id="@+id/editItineraryButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:onClick="editItinerary"
            android:src="@drawable/edit_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/updateItineraryWarningButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:onClick="showItineraryUpdateInfoAlert"
            android:src="@drawable/warning_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mapsFragmentContainerView" />

        <ImageButton
            android:id="@+id/deleteItineraryButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:onClick="deleteItinerary"
            android:src="@drawable/delete_icon"
            app:layout_constraintEnd_toStartOf="@+id/editItineraryButton"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>